# RAPTOR

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Constants.h  DataStructures.h  Doxyfile  Parse.cpp  Parse.h  Parser.cpp  Parser.h  README.md  Raptor.cpp  Raptor.h  Utils.cpp  Utils.h  log.txt  main.cpp
Google_tests/: CMakeLists.txt  test_findJourneys.cpp
NetworkObjects/: DataStructures.h  Route.cpp  Route.h  Stop.cpp  Stop.h  Trip.cpp  Trip.h
NetworkObjects/GTFSObjects/: Agency.cpp  Agency.h  Calendar.h  GTFSObject.cpp  GTFSObject.h  Stop.cpp  Stop.h  StopTime.h  Trip.cpp  Trip.h
dataset/Porto/gtfs/: agency.csv  routes.csv  stop_times.csv  stops.csv
dataset/Porto/large/GTFS/: calendar.txt  routes.txt  stop_times.txt
dataset/Porto/metro/GTFS/: agency.txt  shapes.txt
dataset/Porto/small/GTFS/: trips.csv
dataset/Porto/stcp/GTFS/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  trips.txt
datasets/Porto/metro/GTFS/: stops.txt  trips.txt
datasets/Porto/sample/GTFS/: calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
datasets/Porto/stcp/GTFS/: stops.txt  transfers.txt
docs/html/: Agency_8cpp.html  Agency_8cpp__incl.map  Agency_8cpp__incl.md5  Agency_8h.html  Agency_8h__dep__incl.map  Agency_8h__dep__incl.md5  Agency_8h__incl.map  Agency_8h__incl.md5  Agency_8h_source.html  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  Calendar_8cpp.html  Calendar_8cpp__incl.map  Calendar_8cpp__incl.md5  Calendar_8h.html  Calendar_8h__dep__incl.map  Calendar_8h__dep__incl.md5  Calendar_8h__incl.map  Calendar_8h__incl.md5  Calendar_8h_source.html  DataStructures_8h.html  DataStructures_8h__dep__incl.map  DataStructures_8h__dep__incl.md5  DataStructures_8h__incl.map  DataStructures_8h__incl.md5  DataStructures_8h_source.html  DateTime_8h.html  DateTime_8h__dep__incl.map  DateTime_8h__dep__incl.md5  DateTime_8h__incl.map  DateTime_8h__incl.md5  DateTime_8h_source.html  GTFSObject_8cpp.html  (+193 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  (+36 more)
docs/latex/: Agency_8cpp.tex  Agency_8cpp__incl.md5  Agency_8h.tex  Agency_8h__dep__incl.md5  Agency_8h__incl.md5  Application_8cpp.tex  Application_8cpp__incl.md5  Application_8h.tex  Application_8h__dep__incl.md5  Application_8h__incl.md5  Calendar_8cpp.tex  Calendar_8cpp__incl.md5  Calendar_8h.tex  Calendar_8h__dep__incl.md5  Calendar_8h__incl.md5  DataStructures_8h.tex  DataStructures_8h__dep__incl.md5  DataStructures_8h__incl.md5  DateTime_8h.tex  DateTime_8h__dep__incl.md5  DateTime_8h__incl.md5  GTFSObject_8cpp.tex  GTFSObject_8cpp__incl.md5  GTFSObject_8h.tex  GTFSObject_8h__dep__incl.md5  GTFSObject_8h__incl.md5  Parser_8cpp.tex  Parser_8cpp__incl.md5  Parser_8h.tex  Parser_8h__dep__incl.md5  Parser_8h__incl.md5  Raptor_8cpp.tex  Raptor_8cpp__incl.md5  Raptor_8h.tex  Raptor_8h__dep__incl.md5  Raptor_8h__incl.md5  Route_8cpp.tex  Route_8cpp__incl.md5  Route_8h.tex  Route_8h__dep__incl.md5  (+656 more)
gtfsClasses/: Route.h
src/: Application.cpp  Application.h  Constants.h  DateTime.h  Parser.cpp  Parser.h  Raptor.cpp  Raptor.h  Utils.cpp  Utils.h  main.cpp
src/NetworkObjects/: DataStructures.h
src/NetworkObjects/GTFSObjects/: Calendar.cpp  Calendar.h  GTFSObject.cpp  GTFSObject.h  Route.cpp  Route.h  Stop.cpp  Stop.h  StopTime.cpp  StopTime.h  Trip.cpp  Trip.h
tests/: CMakeLists.txt  findJourneys.cpp
